# admission-bot

./: .gitignore  Dockerfile  README.md  SafeBot.py  api.py  commands.py  keyboards.py  main.py  pyproject.toml  queue_num.py  requirements.txt  serverless.yml  users.txt
.github/workflow/: docker.yml
.github/workflows/: deploy.yaml  docker.yml
app/: main.py  settings.py
app/api/: factory.py  stubs.py
app/api/middlewares/: authentication.py
app/api/routes/: main.py  webhook.py
app/api/schemas/: broadcast_message.py  contract.py  user.py
app/bot/: factory.py  main.py
app/bot/admission_api/: base.py  queue.py  template.py  users.py
app/bot/admission_api/types/: register_user.py
app/bot/filters/: is_registered.py
app/bot/handlers/: __init__.py  broadcast.py  debug.py  errors.py  help_command.py  menu.py  queue.py  register.py  reset_user.py  start.py  start_form.py  thread_info.py
app/bot/keyboards/: confirm_keyboard.py  gender_keyboard.py  geo_keyboard.py  info_keyboard.py  leave_queue_keyboard.py  menu_keyboard.py  payment_type_keyboard.py  queues_keyboard.py  register_queue_keyboard.py  speciality_keyboard.py  study_form_keyboard.py  study_type_keyboard.py  update_queue_keyboard.py
app/bot/keyboards/types/: leave_queue.py  register_queue.py  select_confirm.py  select_form.py  select_gender.py  select_payment.py  select_queue.py  select_speciality.py  select_type.py
app/bot/messages/: commands.py  errors.py
app/bot/middlewares/: sessionmaker.py  throttling.py
app/bot/states/: form.py  queue_form.py  start_form.py
app/bot/utils/: create_uow.py  create_user.py  get_spherical_distance.py  replace_apostrophe.py
app/messages/: api.py  commands.py
app/models/: __init__.py  user.py
app/repositories/: base.py  uow.py  user.py
app/types/: confirms.py  genders.py  payment_types.py  specialities.py  study_forms.py  study_types.py
migrations/: env.py
migrations/versions/: 022e4ccc401b_added_study.py  106ade32a9f4_added_confirm_edbo.py  1f090223d8ab_make_edbo_optional.py  3a8794f84774_added_telegram_id.py  3b013a100a40_added_payment_type.py  b9153e7a5a21_init.py  e555b8755ff8_added_user.py  ebb2adfc3c0b_added_speciality.py  fda5f6ea4ffe_upgraded_user.py
src/admission_bot/: __init__.py
