[project]
name = "admission-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "aiogram>=3.10.0",
    "fastapi>=0.111.1",
    "mangum>=0.17.0",
    "pydantic-settings>=2.3.4",
    "jinja2>=3.1.4",
    "cachetools>=5.4.0",
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
virtual = true
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/admission_bot"]
