[project]
name = "admission-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kulunchick", email = "nikolikrasovski@gmail.com" }
]
dependencies = [
    "aiogram>=3.10.0",
    "fastapi==0.111.0",
    "cachetools>=5.3.3",
    "jinja2>=3.1.4",
    "pydantic-settings==2.3.4",
    "uvicorn==0.30.1",
    "mangum>=0.17.0",
    "aiogram-dialog>=2.1.0",
    "email-validator>=2.2.0",
    "uvloop>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/admission_bot"]
